apps/platform-ui/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-ui
  namespace: front-${ENVIRONMENT}
  labels:
    app: platform-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-ui
  template:
    metadata:
      labels:
        app: platform-ui
    spec:
      containers:
        - name: platform-ui
          image: docker.io/akashtripathi/platform-ui:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
